--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,14 +7,15 @@ emulator {
 	background-color: tan;
 	padding-left: 2em;
 	padding-right: 2em;
-	padding-bottom: 2em;
+	padding-bottom: 1em;
 	border: 5px outset sandybrown;
   display: grid;
 	width: fit-content;
   grid-template: "titlearea" auto
 	               "terminal" auto
                  "buttons" auto
-                 "textbox" auto / auto;
+                 "textbox" auto
+								 "status" auto / auto;
 
 }
 
@@ -38,6 +39,7 @@ buttongroup {
 
 buttongroup button {
 	border: 2px outset lightgray;
+	height: 24px;
 }
 
 textbox {
@@ -49,4 +51,8 @@ textbox textarea {
   width: 40em;
   height: 24em;
 	font-family: monospace;
+}
+
+info {
+	grid-area: status;
 }
