--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+* {
+	box-sizing: border-box;
+}
+
+@font-face {
+  font-family: Printchar21;
+  src: url(assets/Printchar21.ttf);
+}
+
+html {
+  font-size: 12px;
+}
+
+@media screen and (min-width: 1940px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1480px) and (max-width: 1939px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1479px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 720px) and (max-width: 1023px) {
+  html {
+    font-size: 9px;
+  }
+}
+@media screen and (min-width: 540px) and (max-width: 719px) {
+  html {
+    font-size: 7px;
+  }
+}
+@media screen and (min-width: 380px) and (max-width: 539px) {
+  html {
+    font-size: 5px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 379px) {
+  html {
+    font-size: 4px;
+  }
+}
+
+BODY {
+  font-family: Sans-Serif;
+  margin: 0;
+  padding: 0;
+  cursor: default;
+}
