--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -48,7 +48,7 @@ textbox {
 
 textbox textarea {
   resize: none;
-  min-width: 40rem;
+  font-size: 1rem;
   width: 100%;
   height: 24rem;
 	font-family: Printchar21;
