--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
   <button (click)="onIntBASIC($event)">Integer BASIC</button>
   <button (click)="onMSBASIC($event)">MS BASIC</button>
   <button (click)="onKRUSADER($event)">Krusader</button>
-  <button id="width40" (click)="onToggleWidth40($event)">40 Cols {{checked}}</button>
+  <button id="width40" (click)="onToggleWidth40($event)">80 Cols {{checked}}</button>
   <button id="load" (click)="onLoadFromTextarea($event, loadText.value)">Load</button>
   </buttongroup>
   <textbox>
-  <textarea #loadText>{{exampleBas}}</textarea>
+  <textarea #loadText autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">{{exampleBas}}</textarea>
   </textbox>
   <info>{{fps}}</info>
 </emulator>
