--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,8 +37,17 @@ buttongroup {
 
 buttongroup button {
 	border: 2px outset lightgray;
-	height: 2rem;
+	height: 2.1rem;
+	line-height: 2.0rem;
+	vertical-align: middle;
   font-size: 1rem;
+}
+buttongroup button#width40.width40 {
+	padding-right: 1.75rem;
+}
+
+buttongroup button#width40.width80::after {
+	content: '✔️';
 }
 
 textbox {
@@ -51,10 +60,18 @@ textbox textarea {
   font-size: 1rem;
   width: 100%;
   height: 24rem;
-	font-family: Printchar21;
   font-size: 1rem;
   background-color: #000;
   color: #0D0;
+}
+
+textbox textarea,
+textbox.width40 textarea {
+	font-family: Printchar21;
+}
+
+textbox.width80 textarea {
+	font-family: PRNumber3;
 }
 
 info {
