fixed broken url to source repo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 </emulator>
 
 <div>More info<br />
-<a href="https://github/rhoem/webApple1" target="_blank">Source Repository</a><br />
+<a href="https://github.com/rhoem1/webApple1" target="_blank">Source Repository</a><br />
 <a href="http://school.anhb.uwa.edu.au/personalpages/kwessen/apple1/Krusader.htm" target="_blank">Krusader documentation</a><br />
 <a href="http://www.pagetable.com/?p=46" target="_blank">Microsoft 6502 Basic</a><br />
 <a href="http://github.com/jefftranter/6502/tree/master/asm/a1basic" target="_blank">Integer Basic (Woz)</a><br />
